tests/paczka1/small_fuzzy/64527863.err
Error in line 3: iq3MwLUv S191 71,8
Error in line 10: mUvSo7 S1p1 73,3
